--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 chrono = { version = "0.4.24", features = ["serde"] }
 uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
 rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
-
+sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate"] }
