includes created_at, updated_at in app parameters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 chrono = { version = "0.4.24", features = ["serde"] }
 rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
-sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate", "uuid" ] }
+sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono" ] }
