--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 chrono = { version = "0.4.24", features = ["serde"] }
 rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
 sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono" ] }
+regex = { version = "1.8.4" }
+lazy_static = { version = "1.4.0" }
